--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
+    <a href="challange/index.html">Visit W3Schools.com!</a>
   </div>
 </body>
 
