--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
-      <a href="https://raushnn.github.io/rtrue/challange/index.html">Tori beti ka</a>
+      <a href="https://raushnn.github.io/rtrue/challange/index.html">Proceed</a>
     </div>
-      <a href="https://raushnn.github.io/rtrue/challange/index.html">Tori beti ka</a>
   </div>
 </body>
 
