--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1> site changed1 </h1>
+  <h1> site changed2 </h1>
   <div class="container">
     <div class="one">
       <h1 class="one">
@@ -124,7 +124,9 @@
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
+      <div align= "right">
       <a href="https://raushnn.github.io/rtrue/challange/index.html">Proceed</a>
+      </div>
     </div>
   </div>
 </body>
