fixed button issue

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
       <div align= "right">
-      <a href="https://raushnn.github.io/rtrue/challange/index.html">Proceed</a>
+      <!-- <a href="https://raushnn.github.io/rtrue/challange/index.html">Proceed</a> -->
       </div>
     </div>
   </div>
