--- a/birthdaySpecial/index.html
+++ b/birthdaySpecial/index.html
@@ -16,7 +16,7 @@
 			<img id="img" src="">
 		</div>
 		<div id="heartTxt">
-			<span id="clickMe">''</span>
+			<span id="clickMe"></span>
 			<div id="heart">
 				<button id="button" onclick="play()"></button>
 			</div>
@@ -42,9 +42,12 @@
 			var myImage = document.getElementById("img");
 			var myTxt = document.getElementById("Txt");
 			var imageArray = ["pic/pic1.png", "pic/pic2.png", "pic/pic3.png", "pic/pic4.png", "pic/pic5.png", "pic/pic6.png", 
-			"pic/pic7.png", "pic/pic8.png", "pic/pic9.png", "pic/pic10.png", "pic/pic11.png", "pic/pic12.png", "pic/pic13.png", "pic/pic14.png", "pic/pic15.png", "pic/pic16.png", "pic/pic17.png", "pic/pic18.png", "pic/pic19.png", "pic/pic20.png"];
+			"pic/pic7.png", "pic/pic8.png", "pic/pic9.png", "pic/pic10.png", "pic/pic11.png", "pic/pic12.png", "pic/pic13.png",
+			"pic/pic14.png", "pic/pic15.png", "pic/pic16.png", "pic/pic17.png", "pic/pic18.png", "pic/pic19.png", "pic/pic20.png",
+			"pic/pic21.jpg","pic/pic22.jpg", "pic/pic23.jpg","pic/pic24.jpg","pic/pic25.jpg","pic/pic26.jpg","pic/pic27.jpg","pic/pic28.jpg",
+			"pic/pic29.jpg","pic/pic30.jpg","pic/pic31.jpg","pic/pic32.jpg","pic/pic33.jpg","pic/pic34.jpg","pic/pic35.jpg","pic/pic36.jpg"];
 			var imageIndex = 0;
-			var txtArray = ['','','','','','','','','','','','','','','','','','','','',''];
+			var txtArray = ['','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','',''];
 			 var len = imageArray.length;
 			var t = 0;
 		</script>
