--- a/birthdaySpecial/index.html
+++ b/birthdaySpecial/index.html
@@ -15,10 +15,14 @@
 			<span id="tmp"></span>
 			<img id="img" src="">
 		</div>
+		
+
 		<div id="heartTxt">
+			<input type="text" name="a" id="a" maxlength="4" class="code text-center">
+			
 			<span id="clickMe"></span>
 			<div id="heart">
-				<button id="button" onclick="play()"></button>
+				<button id="button" onclick="durr(document.getElementById('a').value)"></button>
 			</div>
 		</div>
 		<div id="content">
@@ -47,7 +51,7 @@
 			"pic/pic21.jpg","pic/pic22.jpg", "pic/pic23.jpg","pic/pic24.jpg","pic/pic25.jpg","pic/pic26.jpg","pic/pic27.jpg","pic/pic28.jpg",
 			"pic/pic29.jpg","pic/pic30.jpg","pic/pic31.jpg","pic/pic32.jpg","pic/pic33.jpg","pic/pic34.jpg","pic/pic35.jpg","pic/pic36.jpg"];
 			var imageIndex = 0;
-			var txtArray = ['','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','',''];
+			var txtArray = ['hello','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','',''];
 			 var len = imageArray.length;
 			var t = 0;
 		</script>
