--- a/hbd/index.html
+++ b/hbd/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Happy birthday Divi!</title>
+  <title>Happy birthday ${name}!</title>
 
 
 
@@ -38,11 +38,12 @@ body {
     </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-  <meta http-equiv="refresh" content="10; url= /index1.html"
+
 </head>
 
 <body>
   <canvas id=c></canvas>
+<p>Heartiest Wishes from__ <a href="../game">${Sender Name}</a> <span><a href="../game">=============> CLICK HERE <=============</a></span> </p>
 
     <script src="js/index.js"></script>
 <body oncontextmenu="return false"></body>
