--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
     </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-  <meta http-equiv="refresh" content="10; url= /index1.html"
+  <meta http-equiv="refresh" content="10; url= rtrue/index1.html"
 </head>
 
 <body>
