--- a/birthdaySpecial/index.html
+++ b/birthdaySpecial/index.html
@@ -51,7 +51,20 @@
 			"pic/pic21.jpg","pic/pic22.jpg", "pic/pic23.jpg","pic/pic24.jpg","pic/pic25.jpg","pic/pic26.jpg","pic/pic27.jpg","pic/pic28.jpg",
 			"pic/pic29.jpg","pic/pic30.jpg","pic/pic31.jpg","pic/pic32.jpg","pic/pic33.jpg","pic/pic34.jpg","pic/pic35.jpg","pic/pic36.jpg"];
 			var imageIndex = 0;
-			var txtArray = ['hello','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','',''];
+			var txtArray = ['Can you recall something from this picture?','I lost the bet but mera mood tumhare blush ko dekh k saara din mst tha',
+			'Am I obsessed with picture of holding your hand? Okay then this is the last one','Why were we laughing? maybe on ankush or Nunneee',
+			'Pinching your cheeks are so satisfying yum yum','Oh MoMo  !',"wake me like this more often..",'Oh yeah, I won that game !!!!',
+			"Dooooo'nt look so cuteeee",'Do you remember what did you write along with that picture? cause I do','',
+			'after trying a lot, phir bhi achhe pics toh nhi aaye :(','We took this pic after I bit you or before????','ahaan, recent picture of a cutie ',
+			'Model jaisi dikhti ho tum -_-','another picture of me you getting pinched by me UwU','I must praise you for your dressing sense. Period.',
+			'You forcing me to change your score but sadly you remained unsuccessful','check my comment on instagram in this picture','Thanks for the kiss Love ;)',
+			"from wearing google swags to working in google, that's how my girl will transform.",'Achha kiya wo pakda hai, warna suna tha hawa beh rhi thi us din ',
+			'Ahaan, I think God has gifted you with extra cuteness','and I hate you a bit for not sending this picture -_-',"see, Your candid looks great but you won't admit.",
+			'this is the first picture I saw of yours and started searching "Divi Chakroborty" on social media.','Dil churana koi inse seekhe, seekhe inse',
+			'hamare dil ko bhi read kr lo na cutie','yahi kaam hamare jaisa ladka kare toh jail ho jaye -_-','ab thak jane p aise diwal ka sahara na le, aapko utha k le jane wala tyaar hai * emoji *',
+			'Touch the banner, not my girl ','Ganja ','ye mt putchna itne saare pictures mile kidhar se',
+			'look at where you came from, look at you now "kuch khaayaaa karoooo"',
+			'aapne ye kapde kisliye wear kiye the?','motu card should be reversed now','',''];
 			 var len = imageArray.length;
 			var t = 0;
 		</script>
